package entities;

import javax.persistence.*;
import javax.validation.constraints.Size;
import java.util.Objects;

@Entity
@NamedQuery(name = "Phone.deleteAllRows", query = "DELETE from Phone")
@Table(name = "PHONE")
public class Phone {
    @Id
    @Column(name = "phoneNumber")
    private Integer phoneNumber;

    @Column(name = "description")
    private String description;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "person_id")
    private Person person;


    public Phone() {
    }

    public Phone(Person person, String description) {
        this.person = person;
        this.description = description;
    }

    public Phone(Integer phoneNumber, String description) {
        this.phoneNumber = phoneNumber;
        this.description = description;
    }

    public Phone(Integer phoneNumber, String description, Person person) {
        this.phoneNumber = phoneNumber;
        this.description = description;
        this.person = person;
    }

    public Integer getPhoneNumber() {
        return phoneNumber;
    }

    public void setPhoneNumber(Integer phoneNumber) {
        this.phoneNumber = phoneNumber;
    }

    public Person getPerson() {
        return person;
    }

    public void setPerson(Person person) {
        this.person = person;
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    @Override
    public String toString() {
        return "Phone{" +
                "phoneNumber=" + phoneNumber +
                ", description='" + description + '\'' +
                ", person=" + person +
                '}';
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof Phone)) return false;
        Phone phone = (Phone) o;
        return getPhoneNumber().equals(phone.getPhoneNumber());
    }

    @Override
    public int hashCode() {
        return Objects.hash(getPhoneNumber());
    }
}